--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
     font-family: "Open Sans";
 }
 
-html, body {
+html,
+body {
     background-color: #e8e8e8;
 }
 
@@ -15,14 +16,17 @@ header {
     display: flex;
     align-items: center;
 }
-nav{
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: #636363;
 }
+
 .container {
-    width: 100%; /*Essencial para que a flexbix Funcione*/
+    width: 100%;
+    /*Essencial para que a flexbix Funcione*/
     max-width: 960px;
     margin: 0 auto;
 }
@@ -33,10 +37,97 @@ ul {
     justify-content: space-between;
     margin: 0;
 }
-li{
+
+li {
     margin: 0 10px 0 0;
 }
-a{
-   text-decoration: none; 
-   color: unset;
+
+a {
+    text-decoration: none;
+    color: unset;
+}
+
+.card {
+    margin-bottom: 20px;
+    border: 1px solid #D9D9D9;
+    border-radius: 4px;
+    background-color: #fff;
+}
+
+.card-top {
+    border-bottom: 1px solid #D9D9D9;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.card-top img {
+    width: 220px;
+}
+
+.card-bottom {
+    padding: 10px 20px 20px 20px;
+}
+
+.card-bottom h3 {
+    color: #0CAF1D;
+    font-size: 20px;
+}
+
+.card-bottom h4 {
+    color: #636363;
+    font-size: 12px;
+}
+
+.card-bottom p {
+    color: #636363;
+    font-size: 12px;
+    margin: 10px 0;
+}
+
+.category-container {
+    display: flex;
+}
+
+.category {
+    padding: 0 20px;
+    margin-right: 20px;
+    background-color: #636363;
+    border-radius: 4px;
+    height: 30px;
+    font-size: 12px;
+    font-weight: 700;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-container-220 {
+    width: 220px;
+}
+
+.btn {
+    border-radius: 4px;
+    height: 42px;
+    font-size: 16px;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-blue {
+    background-color: #3483FA;
+    color: #fff;
+}
+
+.btn-white {
+    border: 1px solid #3483FA;
+    background-color: #fff;
+    color: #3483FA;
+}
+
+.mb20 {
+    margin-bottom: 20px;
 }
